test/scc/expr/semantic-errors/101.a
101.t:5:7: error: invalid operands to binary '-='